fix(config): adjust dim config values
Refs: #220

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -207,7 +207,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
           value: "{{ .Values.backend.processesworker.dim.universalResolverAddress }}"
         - name: "APPLICATIONCHECKLIST__DIM__DIDDOCUMENTBASELOCATION"
-          value: "{{ .Values.backend.processesworker.dim.didDocumentBaseLocation }}"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.dim.didDocumentPath }}"
         - name: "APPLICATIONCHECKLIST__DIM__MAXVALIDATIONTIMEINDAYS"
           value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
         - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
@@ -239,9 +239,9 @@ spec:
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type3 }}"
         - name: "CONNECTORS__SELFDESCRIPTIONDOCUMENTURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
-        - name: "Document__EnableSeedEndpoint"
+        - name: "DOCUMENT__ENABLESEEDENDPOINT"
           value: "True"
-        - name: "Document__FRAMEDOCUMENTTYPEIDS__0"
+        - name: "DOCUMENT__FRAMEDOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.administration.frameDocumentTypeIds.type0 }}"
         - name: "HEALTHCHECKS__0__PATH"
           value: "{{ .Values.backend.healthChecks.startup.path}}"
@@ -336,8 +336,6 @@ spec:
           value: "{{ .Values.centralidp.clients.registration }}"
         - name: "NETWORK2NETWORK__INITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
-        - name: "NETWORK2NETWORK__BASEPORTALADDRESS"
-          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigIndex }}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__INDEX"
