--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -216,7 +216,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
               value: "{{ .Values.backend.processesworker.dim.universalResolverAddress }}"
             - name: "APPLICATIONCHECKLIST__DIM__DIDDOCUMENTBASELOCATION"
-              value: "{{ .Values.backend.processesworker.dim.didDocumentBaseLocation }}"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.dim.didDocumentPath }}"
             - name: "APPLICATIONCHECKLIST__DIM__MAXVALIDATIONTIMEINDAYS"
               value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
