--- a/.github/workflows/provisioning-migrations-image-update.yml
+++ b/.github/workflows/provisioning-migrations-image-update.yml
@@ -39,7 +39,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Modify image tag in values.yaml
         run: |
