chore(credentialIssuer): extend config for ssi credential issuer
Refs: #564

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -219,6 +219,27 @@ spec:
           value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
         - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__PADDINGMODE"
           value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__SCOPE"
+          value: "{{ .Values.backend.processesworker.issuerComponent.scope }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__TOKENADDRESS"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__BASEADDRESS"
+          value: "{{ .Values.backend.processesworker.issuerComponent.baseAddress }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CALLBACKURL"
+          value: "{{ .Values.portalBackendAddress }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGINDEX"
+          value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigIndex }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__INDEX"
+          value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.index }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.interfaces.secret }}"
+              key: "issuercomponent-encryption-key0"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+          value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.cipherMode }}"
+        - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+          value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.paddingMode }}"
         - name: "COMPANYDATA__USECASEPARTICIPATIONMEDIATYPES__0"
           value: "{{ .Values.backend.administration.companyData.useCaseParticipationMediaTypes.type0 }}"
         - name: "COMPANYDATA__SSICERTIFICATEMEDIATYPES__0"
