--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -232,6 +232,40 @@ spec:
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
+            - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__DIM__CLIENTID"
+              value: "{{ .Values.backend.processesworker.dim.clientId }}"
+            - name: "APPLICATIONCHECKLIST__DIM__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.dim.grantType }}"
+            - name: "APPLICATIONCHECKLIST__DIM__CLIENTSECRET"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "dim-client-secret"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__SCOPE"
+              value: "{{ .Values.backend.processesworker.issuerComponent.scope }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__TOKENADDRESS"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__BASEADDRESS"
+              value: "{{ .Values.backend.processesworker.issuerComponent.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CALLBACKURL"
+              value: "{{ .Values.portalBackendAddress }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGINDEX"
+              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigIndex }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__INDEX"
+              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.index }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "issuercomponent-encryption-key0"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.cipherMode }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+              value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.paddingMode }}"
             - name: "KEYCLOAK__CENTRAL__AUTHREALM"
               value: "{{ .Values.centralidp.realm }}"
             - name: "KEYCLOAK__CENTRAL__CLIENTID"
@@ -428,6 +462,8 @@ spec:
               value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.cipherMode }}"
             - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.paddingMode }}"
+            - name: "APPLICATIONCREATION_USEDIMWALLET"
+              value: "{{ .Values.backend.useDimWallet }}"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
