--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -248,6 +248,12 @@ spec:
                   encryptionConfigs:
                     index0:
                       encryptionKey: "<path:portal/data/stable/processes-worker#dim-encryption-key0>"
+                issuerComponent:
+                  clientId: "<path:portal/data/processes-worker#issuercomponent-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#issuercomponent-client-secret>"
+                  encryptionConfigs:
+                    index0:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#issuercomponent-encryption-key0>"
                 invitation:
                   encryptionConfigs:
                     index0:
