feat(issuerComponent): adjust configuration for issuerComponent
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/564

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -232,25 +232,25 @@ spec:
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
-            - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "APPLICATIONCHECKLIST__DIM__CLIENTID"
-              value: "{{ .Values.backend.processesworker.dim.clientId }}"
-            - name: "APPLICATIONCHECKLIST__DIM__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.dim.grantType }}"
-            - name: "APPLICATIONCHECKLIST__DIM__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CLIENTID"
+              value: "{{ .Values.backend.processesworker.issuerComponent.clientId }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.issuerComponent.grantType }}"
+            - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "dim-client-secret"
+                  key: "issuercomponent-client-secret"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__SCOPE"
               value: "{{ .Values.backend.processesworker.issuerComponent.scope }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__TOKENADDRESS"
               value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__BASEADDRESS"
-              value: "{{ .Values.backend.processesworker.issuerComponent.baseAddress }}"
+              value: "{{ .Values.issuerComponentAddress }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGINDEX"
