--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -29,6 +29,7 @@ custodianAddress: "https://managed-identity-wallets-new.beta.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.beta.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
 clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
+issuerComponentAddress: "https://ssi-credential-issuer.beta.demo.catena-x.net"
 
 frontend:
 
