--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -29,6 +29,7 @@ custodianAddress: "https://managed-identity-wallets-new.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
 clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
+issuerComponentAddress: "https://ssi-credential-issuer.dev.demo.catena-x.net"
 
 frontend:
 
@@ -104,6 +105,8 @@ backend:
             backend:
               service: "services-service"
               port: 8080
+
+  useDimWallet: true
 
   keycloak:
     central:
