--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -253,6 +253,8 @@ backend:
       encryptionConfigs:
         index0:
           encryptionKey: "<path:portal/data/beta/processes-worker#issuercomponent-encryption-key0>"
+    bpnDidResolver:
+      clientSecret: "<path:portal/data/beta/processes-worker#bpndidresolver-api-key>"
     invitation:
       encryptionConfigs:
         index0:
