--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -30,6 +30,7 @@ sdfactoryAddress: "https://sdfactory.int.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
 clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
 issuerComponentAddress: "https://ssi-credential-issuer.int.demo.catena-x.net"
+bpnDidResolverAddress: "http://bpn-did-resolution-service-bdrs-server-memory:8081/api/management"
 
 frontend:
 
@@ -253,6 +254,8 @@ backend:
       encryptionConfigs:
         index0:
           encryptionKey: "<path:portal/data/int/processes-worker#issuercomponent-encryption-key0>"
+    bpnDidResolver:
+      clientSecret: "<path:portal/data/int/processes-worker#bpndidresolver-api-key>"
     invitation:
       encryptionConfigs:
         index0:
