--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -115,7 +115,7 @@ frontend:
     name: "registration"
     image:
       name: "docker.io/tractusx/portal-frontend-registration"
-      registrationtag: v1.7.0-RC1
+      registrationtag: aa223d3e86b011ba5801a156a8d3a3b0e8715e57
       pullPolicy: "IfNotPresent"
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
