--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -40,8 +40,10 @@ spec:
               address: "https://centralidp.stable.demo.catena-x.net"
             sharedidpAddress: "https://sharedidp.stable.demo.catena-x.net"
             semanticsAddress: "https://semantics.stable.demo.catena-x.net"
-            bpdmPartnersPoolAddress: "https://business-partners.stable.demo.catena-x.net"
-            bpdmPortalGateAddress: "https://business-partners.stable.demo.catena-x.net"
+            bpdm:
+              poolAddress: "https://business-partners.stable.demo.catena-x.net"
+              poolApiPath: "/pool/v6"
+              portalGateAddress: "https://business-partners.stable.demo.catena-x.net"
             custodianAddress: "https://managed-identity-wallets-new.stable.demo.catena-x.net"
             sdfactoryAddress: "https://sdfactory.stable.demo.catena-x.net"
             clearinghouseAddress: "https://validation.test.dih-cloud.com"
