--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -23,8 +23,10 @@ centralidp:
   address: "https://centralidp.int.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.int.demo.catena-x.net"
 semanticsAddress: "https://semantics.int.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://business-partners.int.demo.catena-x.net"
-bpdmPortalGateAddress: "https://business-partners.int.demo.catena-x.net"
+bpdm:
+  poolAddress: "https://business-partners.int.demo.catena-x.net"
+  poolApiPath: "/pool/v6"
+  portalGateAddress: "https://business-partners.int.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-new.int.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.int.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
