--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -113,7 +113,7 @@ spec:
             - name: "APPLICATIONACTIVATION__DATASPACEADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionDataspacePath }}"
             - name: "APPLICATIONCHECKLIST__BPDM__BASEADDRESS"
-              value: "{{ .Values.bpdm.portalGateAddress }}"
+              value: "{{ .Values.bpdm.portalGateAddress }}{{ .Values.bpdm.portalGateApiPath }}"
             - name: "APPLICATIONCHECKLIST__BPDM__CLIENTID"
               value: "{{ .Values.backend.processesworker.bpdm.clientId }}"
             - name: "APPLICATIONCHECKLIST__BPDM__CLIENTSECRET"
