--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -23,8 +23,11 @@ centralidp:
   address: "https://centralidp-pen.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp-pen.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics-pen.dev.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://business-partners-pen.dev.demo.catena-x.net"
-bpdmPortalGateAddress: "https://business-partners-pen.dev.demo.catena-x.net"
+bpdm:
+  poolAddress: "https://business-partners-pen.dev.demo.catena-x.net"
+  poolApiPath: "/pool/v6"
+  portalGateAddress: "https://business-partners-pen.dev.demo.catena-x.net"
+  portalGateApiPath: "/companies/test-company/v6"
 custodianAddress: "https://managed-identity-wallets-pen-new.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory-pen.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
