feat( activate dim wallet

--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -110,6 +110,8 @@ backend:
               service: "services-service"
               port: 8080
 
+  useDimWallet: true
+
   keycloak:
     central:
       clientId: "<path:portal/data/keycloak#central-client-id>"
