--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -120,6 +120,8 @@ backend:
       clientId: "<path:portal/data/keycloak#shared-client-id>"
       clientSecret: "<path:portal/data/int/keycloak#shared-client-secret>"
 
+  useDimWallet: true
+
   mailing:
     host: "<path:portal/data/mailing#host>"
     port: "<path:portal/data/mailing#port>"
